--- a/amazonia-frontend/src/modules/Header/Header.css
+++ b/amazonia-frontend/src/modules/Header/Header.css
@@ -10,10 +10,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  position: sticky;
-  top: 0px;
-  left: 0px;
-  height: 50px;
+  height: 100%;
   padding: 0px 30px 0px 30px;
   user-select: none;
   box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.5);
