--- a/amazonia-frontend/src/modules/Home/Home.css
+++ b/amazonia-frontend/src/modules/Home/Home.css
@@ -28,7 +28,7 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  justify-content: center;
+  justify-content: left;
   padding: 5px;
   overflow-y: auto;
 }
