--- a/amazonia-frontend/src/tests/Gallery.css
+++ b/amazonia-frontend/src/tests/Gallery.css
@@ -11,15 +11,14 @@
 }
 
 .gallery__body {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, 180px);
-    grid-gap: 20px;
+    display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     padding: 30px 50px;
     box-sizing: border-box;
     width: 100%;
     height: 540px;
-    max-height: 10000px;
+    max-height: 1000px;
     overflow-y: scroll;
     border-bottom: 2px solid rgb(128, 128, 128);
     gap: 20px;
