--- a/amazonia-frontend/src/tests/Modal.css
+++ b/amazonia-frontend/src/tests/Modal.css
@@ -17,7 +17,9 @@
     top: 0px;
     left: 0px;
     width: 100%;
-    height: 100%;
+    top: 50px;
+    height: calc(100vh - 50px);
+    overflow: auto;
     z-index: 2;
     background-color: rgba(0, 0, 0, 0.4);
 }
